Working version
---------------

### Restored backends:

- #12276: native-code compilation for POWER (64 bits, little-endian)
  (Xavier Leroy, review by KC Sivaramakrishnan and Anil Madhavapeddy)

### Language features:

### Runtime system:

- #10111: Increase the detail of location information for debugging events to
  allow the end line number and character offset to be reported.
  (David Allsopp, review by Nick Barnes, Enguerrand Decorne and Stephen Dolan)

- #10403, #12202: introduce `caml_ext_table_add_noexc` that does not
  raise `Out_of_memory` exceptions and use it inside the blocking sections
  of `caml_read_directory`.  Also, check for overflows in ext table sizes.
  (Xavier Leroy, report by Arseniy Alekseyev, review by Gabriel Scherer)

- #12223: Constify constructors and flags tables in C code. Now these
  tables will go in the readonly segment, where they belong.
  (Antonin Décimo, review by Gabriel Scherer and Xavier Leroy)

- #12234: make instrumented time calculation more thread-safe on macOS.
  (Anil Madhavapeddy, review by Daniel Bünzli and Xavier Leroy)

- #12275: caml/stack.h: more abstract macros to describe OCaml stacks and
  how to traverse them, supporting more stack layouts.
  (Xavier Leroy, review by KC Sivaramakrishnan and Fabrice Buoro)

### Code generation and optimizations:

### Standard library:

* #10775: Half-precision floating-point elements in Bigarray.
  (Anton Yabchinskiy, review by Xavier Leroy and Nicolás Ojeda Bär)

- #12217: Add `Array.shuffle`.
  (Daniel Bünzli, review by Nicolás Ojeda Bär, David Allsopp and Alain Frisch)


### Other libraries:

- #12213: Dynlink library, improve legibility of error messages
  (Samuel Hym, review by Gabriel Scherer and Nicolás Ojeda Bär)

### Tools:

- #12147: ocamllex: Allow carriage returns at the end of line directives.
  (SeungCheol Jung, review by Nicolás Ojeda Bär)

- #12260: Fix invalid_argument on some external or module aliases in ocamlnat